# research_summer_2026

./: .gitignore  README.md
others/: gemini-code-1778507600000.py
papers/main paper/: main.tex  references.bib
research/: CLAUDE.md  README.md  pyproject.toml  requirements-gpu.txt  requirements-unifolm-gpu.txt  requirements.txt
research/notebooks/: README.md  step1_mock_profiling.ipynb  step1_openvla_profiling.ipynb  step1_unifolm_mock_profiling.ipynb  step1_unifolm_nsight_systems_profiling.ipynb  step1_unifolm_profiling.ipynb
research/src/: __init__.py  paths.py  step1_baseline_comparison.py  step1_observation_log.md  step1_profile_openvla.py  step1_profile_unifolm_vla0.py  step1_setup_env.sh  step2_esn_bridge.py  step2_train_esn.py  step3_ablation.py  step3_full_evaluation.py  step4_compile_results.py  step4_paper_figures.py  unifolm_vla_runtime.py
