[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "g1-openvla-research"
version = "0.1.0"
description = "OpenVLA profiling and ESN bridge research for Unitree G1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23,<3",
    "scipy>=1.10",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "tqdm>=4.27",
]

# GPU / OpenVLA profiling: pip install -r requirements-gpu.txt
# (PyTorch CUDA wheels and pinned transformers/timm are not listed here.)

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
step1-profile-openvla = "src.step1_profile_openvla:main"
